[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/LevitateParticles.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/levitating_object.gd" type="Script" id=2]

[node name="LevitatingObject" type="RigidBody2D"]
collision_layer = 2
collision_mask = 47
mass = 10.0
continuous_cd = 1
contacts_reported = 4
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="Body" type="Polygon2D" parent="."]
color = Color( 0.843137, 0.498039, 0.0117647, 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.200001, -0.200001 )
scale = Vector2( 1.00781, 1.00781 )

[node name="LevitateParticles" parent="." instance=ExtResource( 1 )]

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_LevitatingObject_body_entered"]
